<resources>
    <string name="app_name">Olympe</string>

    <string name="all_button_valider">Valider</string>
    <string name="all_button_retour">Retour</string>
    <string name="all_erreurSaisie">Erreur de saisie. Veuillez remplir correctement les champs.</string>
    <string name="all_messageConnexion">Vous devez vous connecter à votre profil pour utiliser cette fonctionnalité.</string>
    <string name="all_langueFrancais">Français</string>
    <string name="all_langueAnglais">Anglais</string>
    <string name="all_permissionRequiseTitle">Permission requise</string>
    <string name="all_permissionRequise">Cette permission est requise pour avoir accès au nombre de pas</string>
    <string name="all_permissionAccordee">Permission autorisée</string>
    <string name="all_permissionRefusee">Permission refusée</string>
    <string name="all_capteurIndisponible">Capteur de pas non disponible</string>


    <string name="menu_sante">Santé</string>
    <string name="menu_performances">Performances</string>
    <string name="menu_entrainement">Entraînement</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_aliments">Aliments</string>

    <string name="infos_taille">Taille :</string>
    <string name="infos_poids">Poids :</string>
    <string name="infos_sexe">Sexe :</string>
    <string name="infos_homme">Homme</string>
    <string name="infos_femme">Femme</string>

    <string name="aliments_calories">Calories : </string>
    <string name="aliments_proteines">Protéines : </string>
    <string name="aliments_glucides">Glucides : </string>
    <string name="aliments_lipides">Lipides : </string>

    <string name="performances_tableau_titre1">Exercice</string>
    <string name="performances_tableau_titre2">Performance</string>
    <string name="performances_tableau_titre3">Date</string>

    <string name="aliment_pomme">Pomme</string>
    <string name="aliment_banane">Banane</string>
    <string name="aliment_oeuf">Oeuf</string>
    <string name="aliment_poivron">Poivron</string>
    <string name="aliment_poulet_blanc">Blanc de poulet</string>
    <string name="aliment_carotte">Carotte</string>
    <string name="aliment_lentille">Lentille</string>
    <string name="aliment_avocat">Avocat</string>
    <string name="aliment_poisson_cabillaud">Cabillaud</string>
    <string name="aliment_brocoli">Brocoli</string>

    <string name="sante_nombrePas">Nombre de pas aujourd\'hui :</string>
    <string name="sante_nombrePas_indisponible">Capteur de pas non disponible</string>
    <string name="metrique_pas">pas</string>
    <string name="sante_distance">Distance parcouru :</string>
    <string name="metrique_distance">km</string>
    <string name="sante_calories">Calories dépensées :</string>
    <string name="sante_calories_indisponible">Vous devez vous connecter à votre profil afin de pouvoir calculer votre dépense calorique.</string>
    
    <string name="profil_langue">Langue :</string>
    <string name="profil_profil">Profil :</string>
    <string name="profil_inscription">S\'enregistrer</string>
    <string name="profil_connecter">Connexion</string>
    <string name="profil_deconnecter">Déconnexion</string>
    <string name="profil_changerLangue">Modifier la langue</string>
    <string name="profil_pseudo">Pseudo :</string>
    <string name="profil_changer_pseudo">Modifier le pseudo</string>
    <string name="profil_password">Mot de passe :</string>
    <string name="profil_changer_password">Modifier le mot de passe</string>
    <string name="profil_changer_infos">Modifier les informations</string>
    <string name="profil_infosModifiees">Informations modifiées</string>
    <string name="profil_pseudoUtilise">Le pseudo est déjà utilisé.</string>
    <string name="profil_pseudoModifie">Pseudo modifié</string>
    <string name="profil_password1">Entrez un mot de passe :</string>
    <string name="profil_password2">Retapez le mot de passe :</string>
    <string name="profil_erreurPasswordEgaux">Les mots de passe doivent être identiques</string>
    <string name="profil_passwordModifie">Password modifié</string>
    <string name="profil_inscriptionReussie">Inscription réussie</string>
    <string name="profil_seConnecter">Se connecter</string>
    <string name="profil_connexionReussie">Connexion réussie</string>
    <string name="profil_connexionRefusée">Mauvais identifiants</string>

    <string name="entrainement_performanceAjoutée">Performance ajoutée</string>

</resources>