<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/view_aliments_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="26sp"
        android:text="Nom"/>

    <ImageView
        android:id="@+id/view_aliments_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/view_aliments_nom"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/view_aliments_calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/view_aliments_image"
        android:layout_below="@+id/view_aliments_nom"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:text="@string/aliments_calories"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/view_aliments_calories"
        android:layout_toEndOf="@+id/view_aliments_image">

        <TextView
            android:id="@+id/view_aliments_proteines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aliments_proteines"
            android:textSize="15sp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/view_aliments_glucides"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aliments_glucides"
            android:textSize="15sp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/view_aliments_lipides"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aliments_lipides"
            android:textSize="15sp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/view_aliments_image"
        android:background="#807A7A"/>




</RelativeLayout>