<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profil_popup_password1_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil_password1"/>

    <EditText
        android:id="@+id/profil_popup_password1_editText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/profil_popup_password1_textView"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/profil_popup_password1_erreur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profil_popup_password1_textView"
        android:visibility="gone"
        android:textColor="#F00"
        />

    <TextView
        android:id="@+id/profil_popup_password2_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profil_popup_password1_erreur"
        android:text="@string/profil_password2"/>

    <EditText
        android:id="@+id/profil_popup_password2_editText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/profil_popup_password2_textView"
        android:layout_below="@+id/profil_popup_password1_erreur"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/profil_popup_password2_erreur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profil_popup_password2_textView"
        android:visibility="gone"
        android:textColor="#F00"
        />

    <Button
        android:id="@+id/profil_popup_password_buttonValider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profil_popup_password2_erreur"
        android:text="@string/all_button_valider"/>

    <Button
        android:id="@+id/profil_popup_password_buttonRetour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/profil_popup_password2_erreur"
        android:layout_toEndOf="@id/profil_popup_password_buttonValider"
        android:text="@string/all_button_retour"/>

</RelativeLayout>